[AF] Make IsCreditCardUploadEnabled use ActiveAccount email if in Butter

It used to get the Primary Account's email but should get the active
account's one instead if in Butter state.

Bug: 881730
Change-Id: I1e48d39bd1c908bee82034e1eb7b40231f6c788d
Reviewed-on: https://chromium-review.googlesource.com/1213444
Reviewed-by: Mathieu Perreault <mathp@chromium.org>
Commit-Queue: Sebastien Seguin-Gagnon <sebsg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#589617}
Former-commit-id: 99e4e0f3c851a93c897de63864b0536ff7050bfa